tests/ui/attributes/crate-name-empty.stderr
error: crate name must not be empty
  --> $DIR/crate-name-empty.rs:3:1
   |
LL | #![crate_name = ""]
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

